added tests for ILoadHelper.findMatchingResources (WiP)